incluindo a função de limpar inputs

--- a/35-calculadora-imc-react/src/App.sass
+++ b/35-calculadora-imc-react/src/App.sass
@@ -1,4 +1,4 @@
-@use 'index'
+@use './index'
     
 .container
     min-width: 400px
@@ -6,4 +6,4 @@
     background-color: index.$secondary-bg-color
     padding: 2rem
 
-    
+
