--- a/35-calculadora-imc-react/src/index.sass
+++ b/35-calculadora-imc-react/src/index.sass
@@ -23,3 +23,7 @@ body
     align-items: center
     min-height: 100vh
     color: $primary-font-color
+
+@media (max-width: 450px)
+    body
+        background-color: $secondary-bg-color
