--- a/35-calculadora-imc-react/src/index.css
+++ b/35-calculadora-imc-react/src/index.css
@@ -12,4 +12,10 @@ body {
   align-items: center;
   min-height: 100vh;
   color: #ffffff;
+}
+
+@media (max-width: 450px) {
+  body {
+    background-color: #1d1e33;
+  }
 }/*# sourceMappingURL=index.css.map */
