--- a/35-calculadora-imc-react/src/App.css
+++ b/35-calculadora-imc-react/src/App.css
@@ -14,6 +14,11 @@ body {
   color: #ffffff;
 }
 
+@media (max-width: 450px) {
+  body {
+    background-color: #1d1e33;
+  }
+}
 .container {
   min-width: 400px;
   min-height: 400px;
