--- a/35-calculadora-imc-react/src/components/button/Button.css
+++ b/35-calculadora-imc-react/src/components/button/Button.css
@@ -14,6 +14,11 @@ body {
   color: #ffffff;
 }
 
+@media (max-width: 450px) {
+  body {
+    background-color: #1d1e33;
+  }
+}
 button {
   text-transform: uppercase;
   padding: 1rem 1.5rem;
