--- a/35-calculadora-imc-react/src/components/imc-calc/ImcCalc.css
+++ b/35-calculadora-imc-react/src/components/imc-calc/ImcCalc.css
@@ -14,6 +14,11 @@ body {
   color: #ffffff;
 }
 
+@media (max-width: 450px) {
+  body {
+    background-color: #1d1e33;
+  }
+}
 #calc-container h2 {
   text-align: center;
   margin-bottom: 2rem;
